--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,9 +10,9 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "lodash": "^4.17.4",
     "vue": "^2.1.10",
-    "vue-resource": "^1.2.0",
     "vue-router": "^2.2.0",
     "vue-strap": "^1.1.36",
     "vuex": "^2.1.2"
